# national-security-diligence-lab

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  ns_screen.py  pyproject.toml  requirements.txt
data/redacted_outputs/: README.md  a1_cfius_public_actions_sample.csv  a2_outbound_triage_sample.csv  c1_data_threshold_sample.csv  c2_forfeiture_timeline_sample.csv  c3_bounty_program_matrix.csv  d1_integrated_workflow_sample.csv  d2_ns_screen_sample.csv  d2_ownership_graph_sample.csv  d3_remedy_comparison_timeline.csv
data/sample/: README.md  c2_public_forfeiture_events.csv  c3_whistleblower_programs.csv  cfius_annual_report_figures.csv  d2_fixture_screening_list.csv  d3_remedy_comparison_events.csv
data/synthetic/: README.md  a2_outbound_targets.csv  c1_data_assets.csv  d1_deal_intake_flags.csv  d2_counterparties.csv  d2_ownership_edges.csv
docs/: data_sources.md  dependency_review.md  limitations.md  update_log.md
notebooks/: A2_outbound_triage.ipynb
src/ns_diligence/: __init__.py  award_matrix.py  cfius_reports.py  data_threshold_checker.py  export_list_screen.py  fetch_csl.py  fetch_ofac.py  outbound_triage.py  ownership_graph.py  remedy_comparison.py  risk_workflow.py  screen_names.py  timeline_builder.py
tests/: test_award_matrix.py  test_cfius_reports.py  test_data_threshold_checker.py  test_live_sources.py  test_outbound_triage.py  test_remedy_comparison.py  test_risk_workflow.py  test_screening_toolkit.py  test_timeline_builder.py
